sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: '(' expected but identifier found.
  while switch==true{
        ^AlgBubbleSort1:10: error: illegal start of simple expression
}
^