sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  while switch==true{
    switch=false
    for(k<-0 to getNombreValeurs()-2){
      if (plusPetit(k+1,k)) {echange(k+1,k)} switch=true
    }
  }
      
}
